--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -131,19 +131,19 @@
     .vc { color: $gist-blue !important} /* Name.Variable.Class */
     .vi { color: $gist-blue !important} /* Name.Variable.Instance */
     .vg { color: $gist-blue !important} /* Name.Variable.Global */
-    .gd { color: $cyan !important} /* Generic.Deleted */
-    .m, .pl-c1  { color: $cyan !important} /* Literal.Number */
-    .s, .pl-s1, .pl-pds  { color: $cyan !important} /* Literal.String */
-    .mf { color: $cyan !important} /* Literal.Number.Float */
-    .mh { color: $cyan !important} /* Literal.Number.Hex */
-    .mi, .pl-c1 { color: $cyan !important} /* Literal.Number.Integer */
-    .mo { color: $cyan !important} /* Literal.Number.Oct */
-    .sc { color: $cyan !important} /* Literal.String.Char */
-    .s2 { color: $cyan !important} /* Literal.String.Double */
-    .si { color: $cyan !important} /* Literal.String.Interpol */
-    .sx { color: $cyan !important} /* Literal.String.Other */
-    .s1 { color: $cyan !important} /* Literal.String.Single */
-    .ss { color: $cyan !important} /* Literal.String.Symbol */
-    .il { color: $cyan !important} /* Literal.Number.Integer.Long */
+    .gd { color: $gist-cyan !important} /* Generic.Deleted */
+    .m, .pl-c1  { color: $gist-cyan !important} /* Literal.Number */
+    .s, .pl-s1, .pl-pds  { color: $gist-cyan !important} /* Literal.String */
+    .mf { color: $gist-cyan !important} /* Literal.Number.Float */
+    .mh { color: $gist-cyan !important} /* Literal.Number.Hex */
+    .mi, .pl-c1 { color: $gist-cyan !important} /* Literal.Number.Integer */
+    .mo { color: $gist-cyan !important} /* Literal.Number.Oct */
+    .sc { color: $gist-cyan !important} /* Literal.String.Char */
+    .s2 { color: $gist-cyan !important} /* Literal.String.Double */
+    .si { color: $gist-cyan !important} /* Literal.String.Interpol */
+    .sx { color: $gist-cyan !important} /* Literal.String.Other */
+    .s1 { color: $gist-cyan !important} /* Literal.String.Single */
+    .ss { color: $gist-cyan !important} /* Literal.String.Symbol */
+    .il { color: $gist-cyan !important} /* Literal.Number.Integer.Long */
   }
 }
