--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -71,7 +71,7 @@ $gist-red:       #dc322f;
 $gist-magenta:   #d33682;
 $gist-violet:    #6c71c4;
 $gist-blue:      #268bd2;
-$cyan:      #2aa198;
+$gist-cyan:      #2aa198;
 $green:     #859900;
 
 $selection-bg        : $gist-red;
@@ -94,7 +94,7 @@ $gist-meta-color     : rgba(187,187,187,0.8);
 // $gist-magenta:   #2cc97d;
 // $gist-violet:    #938e3b;
 // $gist-blue:      #d9742d;
-// $cyan:      #d55e67;
+// $gist-cyan:      #d55e67;
 // $green:     #7a66ff;
 // $gist-border-color   : #base1;
 // $selection-bg        : $gist-red;
