--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -72,7 +72,7 @@ $gist-magenta:   #d33682;
 $gist-violet:    #6c71c4;
 $gist-blue:      #268bd2;
 $gist-cyan:      #2aa198;
-$green:     #859900;
+$gist-green:     #859900;
 
 $selection-bg        : $gist-red;
 $selection-color     : $gist-base2;
@@ -95,7 +95,7 @@ $gist-meta-color     : rgba(187,187,187,0.8);
 // $gist-violet:    #938e3b;
 // $gist-blue:      #d9742d;
 // $gist-cyan:      #d55e67;
-// $green:     #7a66ff;
+// $gist-green:     #7a66ff;
 // $gist-border-color   : #base1;
 // $selection-bg        : $gist-red;
 // $selection-color     : $gist-base2;
