--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -74,7 +74,7 @@ $gist-blue:      #268bd2;
 $gist-cyan:      #2aa198;
 $gist-green:     #859900;
 
-$selection-bg        : $gist-red;
+$gist-selection-bg        : $gist-red;
 $selection-color     : $gist-base2;
 $gist-border-color   : #d3d3d3;
 $gist-meta-color     : rgba(187,187,187,0.8);
@@ -97,7 +97,7 @@ $gist-meta-color     : rgba(187,187,187,0.8);
 // $gist-cyan:      #d55e67;
 // $gist-green:     #7a66ff;
 // $gist-border-color   : #base1;
-// $selection-bg        : $gist-red;
+// $gist-selection-bg        : $gist-red;
 // $selection-color     : $gist-base2;
 // 
 // $gist-meta-color     : rgba(116, 112, 112, 0.8);
