--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -75,7 +75,7 @@ $gist-cyan:      #2aa198;
 $gist-green:     #859900;
 
 $gist-selection-bg        : $gist-red;
-$selection-color     : $gist-base2;
+$gist-selection-color     : $gist-base2;
 $gist-border-color   : #d3d3d3;
 $gist-meta-color     : rgba(187,187,187,0.8);
 
@@ -98,7 +98,7 @@ $gist-meta-color     : rgba(187,187,187,0.8);
 // $gist-green:     #7a66ff;
 // $gist-border-color   : #base1;
 // $gist-selection-bg        : $gist-red;
-// $selection-color     : $gist-base2;
+// $gist-selection-color     : $gist-base2;
 // 
 // $gist-meta-color     : rgba(116, 112, 112, 0.8);
 
