--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -50,57 +50,31 @@ $large               : "only screen and (min-width: 800px)";
 $header-height       : 300px;
 
 
-// Syntax highlight colors
+// Solarized dark syntax highlight
 // --------------------------------------------------
 
-// Syntax highlight color variables
-// --------------------------------------------------
+$gist-base03          : #fdf6e3;
+$gist-base02          : #eee8d5;
+$gist-base01          : #93a1a1;
+$gist-base00          : #839496;
+$gist-base0           : #657b83;
+$gist-base1           : #586e75;
+$gist-base2           : #073642;
+$gist-base3           : #002b36;
 
-$gist-base03:    #002b36;
-$gist-base02:    #073642;
-$gist-base01:    #586e75;
-$gist-base00:    #657b83;
-$gist-base0:     #839496;
-$gist-base1:     #93a1a1;
-$gist-base2:     #eee8d5;
-$gist-base3:     #fdf6e3;
-
-$gist-yellow:    #b58900;
-$gist-orange:    #cb4b16;
-$gist-red:       #dc322f;
-$gist-magenta:   #d33682;
-$gist-violet:    #6c71c4;
-$gist-blue:      #268bd2;
-$gist-cyan:      #2aa198;
-$gist-green:     #859900;
-
-$gist-selection-bg        : $gist-red;
-$gist-selection-color     : $gist-base2;
-$gist-border-color   : #d3d3d3;
-$gist-meta-color     : rgba(187,187,187,0.8);
-
-// $gist-base03:    #fdf6e3;
-// $gist-base02:    #eee8d5;
-// $gist-base01:    #93a1a1;
-// $gist-base00:    #839496;
-// $gist-base0:     #657b83;
-// $gist-base1:     #586e75;
-// $gist-base2:     #073642;
-// $gist-base3:     #002b36;
-// 
-// $gist-yellow:    #4a76ff;
-// $gist-orange:    #34b4e9;
-// $gist-red:       #23cdd0;
-// $gist-magenta:   #2cc97d;
-// $gist-violet:    #938e3b;
-// $gist-blue:      #d9742d;
-// $gist-cyan:      #d55e67;
-// $gist-green:     #7a66ff;
-// $gist-border-color   : #base1;
-// $gist-selection-bg        : $gist-red;
-// $gist-selection-color     : $gist-base2;
-// 
-// $gist-meta-color     : rgba(116, 112, 112, 0.8);
+$gist-yellow          : #4a76ff;
+$gist-orange          : #34b4e9;
+$gist-red             : #23cdd0;
+$gist-magenta         : #2cc97d;
+$gist-violet          : #938e3b;
+$gist-blue            : #d9742d;
+$gist-cyan            : #d55e67;
+$gist-green           : #7a66ff;
+    
+$gist-border-color    : #base1;
+$gist-selection-bg    : $gist-red;
+$gist-selection-color : $gist-base2;
+$gist-meta-color      : rgba(116, 112, 112, 0.8);
 
 
 // Donation colors
