--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -62,14 +62,14 @@ $gist-base1           : #586e75;
 $gist-base2           : #073642;
 $gist-base3           : #002b36;
 
-$gist-yellow          : #4a76ff;
-$gist-orange          : #34b4e9;
-$gist-red             : #23cdd0;
-$gist-magenta         : #2cc97d;
-$gist-violet          : #938e3b;
-$gist-blue            : #d9742d;
-$gist-cyan            : #d55e67;
-$gist-green           : #7a66ff;
+$gist-yellow          : #b58900;
+$gist-orange          : #cb4b16;
+$gist-red             : #dc322f;
+$gist-magenta         : #d33682;
+$gist-violet          : #6c71c4;
+$gist-blue            : #268bd2;
+$gist-cyan            : #2aa198;
+$gist-green           : #859900;
     
 $gist-border-color    : #base1;
 $gist-selection-bg    : $gist-red;
