Gist CSS update

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -71,8 +71,8 @@ $gist-blue            : #268bd2;
 $gist-cyan            : #2aa198;
 $gist-green           : #859900;
 
-$gist-selection-bg    : $gist-red;
-$gist-selection-color : $gist-base2;
+$gist-selection-bg    : $gist-magenta;
+$gist-selection-color : $gist-base0;
 $gist-border-color    : #d3d3d3;
 $gist-meta-color      : rgba(187,187,187,0.8);
 
