Gist CSS update

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -72,7 +72,7 @@ $gist-cyan            : #2aa198;
 $gist-green           : #859900;
 
 $gist-selection-bg    : $gist-base2;
-$gist-selection-color : $gist-base00;
+$gist-selection-color : $gist-blue;
 $gist-border-color    : #d3d3d3;
 $gist-meta-color      : rgba(187,187,187,0.8);
 
