--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -60,6 +60,6 @@ b, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a {
     @include transition(all .2s ease);
 }
 
-.results-container a {
-    @include transition(none);
+.search-result-block-title a {
+  @include transition(none);
 }
