--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,6 +53,7 @@
          </div>
       </footer>
     </div><!-- /.entry-content -->
+    {% include author.html %}
     {% if page.comments != false %}<section id="disqus_thread"></section><!-- /#disqus_thread -->{% endif %}
     {% if site.related_posts.size > 0 %}{% include read-more.html %}{% endif %}
   </article>
