Author added + fix

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -679,7 +679,7 @@ td a {
     img {
         width: 80px;
         height: 80px;
-        border-radius: $border-radius;
+        border-radius: 6px;
     }
 }
 .author-content {
