--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -600,7 +600,7 @@ td a {
   background-color: #fff;
   color: rgba(0, 156, 222, 0);
   border: solid 1px $donation-color;
-  background-image: url("http://tiborsimon.github.com/images/paypal-logo.png");
+  background-image: url("http://tiborsimon.github.com/images/core/paypal-logo.png");
   background-repeat: no-repeat;
   background-position: center;
 }
