--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -149,6 +149,9 @@ svg:not(:root) {
 .half-centered-wrapper {
   text-align: center;
   margin-bottom: 20px;
+  .fa {
+    padding-right: 5px;
+  }
 }
 
 .half-centered-wrapper:before,
