cd C:\Users\Tibor\Dropbox\_SITE\tiborsimon.github.io

--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -151,6 +151,9 @@ svg:not(:root) {
   margin-bottom: 20px;
   .fa {
     padding-right: 5px;
+    font-size: 130%;
+    position: relative;
+    top: 1px;
   }
 }
 
