--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -688,15 +688,16 @@ td a {
 
 .ribbon:hover {
   color: white;
-  box-shadow: 0px 1px 3px #777;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.7);
 }
 
-.ribbon:last-child {
-  border-radius: 0 0 0 6px;
-}
 .ribbon:first-child {
-  border-radius: 0 0 6px 0;
+  border-radius: 0 3px 3px 0;
 }
+.ribbon:last-child {
+  border-radius: 3px 0 0 3px;
+}
+
 
 .ribbon-repo:hover {
   background-color: $info;
