--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -676,19 +676,18 @@ td a {
 
 .ribbon {
   display: block;
-  color: rgb(228, 228, 228);
+  color: #e4e4e4;
   padding: 4px 6px;
   font-size: 112%;
   float: right;
   position: relative;
   border-radius: 3px;
   margin-left: 4px;
-  box-shadow: 0px 1px 3px #D3D3D3 inset;
+  border: 1px solid;
 }
 
 .ribbon:hover {
   color: white;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.7);
 }
 
 .ribbon:first-child {
