--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -706,3 +706,8 @@ td a {
   background-color: $success;
   border: 1px solid $success;
 }
+
+.ribbon-conversation {
+  background-color: $warning;
+  border: 1px solid $warning;
+}
