--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -572,8 +572,7 @@ th {
 
 td {
   font-size: 90%;
-  padding-left: 6px;
-  padding-bottom: 6px;
+  padding: 3px 0 3px 6px;
   border-top: solid 1px #ccc;
 }
 
