--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,6 +40,7 @@
         {% endif %}
       </div><!-- /.header-title-wrap -->
     </header>
+    {% include toc.html %}
     <div class="entry-content">
       {{ content }}
       <footer class="entry-meta">
