--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -4,6 +4,7 @@ var toc_visible = true;
 $(document).ready(function() {
     setTimeout(function(){
         $('#toc').toc();
+        $('#toc').fadeIn();
     }, 1500);
 });
 
