--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -721,6 +721,10 @@ td a {
 // TOC
 // --------------------------------------------------
 
+.entry-content {
+  z-index: 2000;
+}
+
 div#toc {
   position: fixed;
   left: 50%;
