--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -3,7 +3,7 @@
 var toc_visible = true;
 $(document).ready(function() {
     setTimeout(function(){
-        $('#toc').toc({ showEffect: 'fadeOut' });
+        $('#toc').toc({ showEffect: 'fadeIn' });
     }, 1500);
 });
 
