--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -56,7 +56,7 @@
 
 // Global Transition
 // ---------------------------------------------------
-b, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a, #toc {
+b, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a {
     @include transition(all .2s ease);
 }
 
