--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -735,6 +735,8 @@ div#toc {
   padding-left: 50px;
   display: block;
   width: 243px;
+  -webkit-transition: margin-right 0.4s; /* Safari 3.1 to 6.0 */
+  transition: margin-right 0.4s;
 }
 
 div#toc:hover,
