--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -36,7 +36,7 @@ figure {
       img {
         width: 310px;
         float: left;
-        margin-right: 10px;
+        margin-right: 0 5px;
       }
       figcaption {
         clear: left;
