--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -48,7 +48,7 @@ a {
 // --------------------------------------------------
 figcaption {
     /*padding-top: 10px;*/
-    @include font(14);
+    font-size: 88%;
     /*line-height: 1.3;*/
     color: lighten($text-color, 10);
     text-align: center;
