--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -22,18 +22,18 @@
   .highlight {
     border-collapse: separate;
     border-spacing: 0;
-    @include rounded(6px);
-    @include box-shadow(0 2px 5px rgba(0, 0, 0, 0.09));
     overflow: hidden;
     margin-bottom: 25px;
-    border: 1px solid $gist-border-color;
+    border: none !important;
   }
 
   .gist-data {
-    overflow: visible !important;
+    overflow-x: auto !important;
     word-wrap: normal !important;
     background-color: transparent !important;
-    border-bottom: none !important;
+    @include rounded(6px);
+    border: 1px solid $gist-border-color;
+    @include box-shadow(0 2px 5px rgba(0, 0, 0, 0.09));
   }
 
   .line-data {
