--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -15,12 +15,12 @@
 
   ::-webkit-scrollbar-thumb {
       background: $foreground-color;
-      @include rounded(6px);
+      @include rounded(0 0 6px 6px);
   }
 
   ::-webkit-scrollbar-track {
       background: $background-color;
-      @include rounded(6px);
+      @include rounded(0 0 6px 6px);
   }
 
   // For Internet Explorer
@@ -31,11 +31,11 @@
 }
 
 
+
 .gist .gist-file {
   background-color: transparent !important;
   border: none !important;
   background-color: $gist-base3;
-  @include rounded(6px);
   @include scrollbars(.5em, slategray);
 }
 
@@ -56,18 +56,18 @@
   .highlight {
     border-collapse: separate;
     border-spacing: 0;
-    @include rounded(6px);
-    @include box-shadow(0 2px 5px rgba(0, 0, 0, 0.09));
     overflow: hidden;
     margin-bottom: 25px;
-    border: 1px solid $gist-border-color;
+    border: none !important;
   }
 
   .gist-data {
     overflow-x: auto !important;
     word-wrap: normal !important;
     background-color: transparent !important;
-    border-bottom: none !important;
+    @include rounded(6px);
+    border: 1px solid $gist-border-color;
+    @include box-shadow(0 2px 5px rgba(0, 0, 0, 0.09));
   }
 
   .line-data {
