--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -30,13 +30,11 @@
   }
 }
 
-
-
 .gist .gist-file {
   background-color: transparent !important;
   border: none !important;
   background-color: $gist-base3;
-  @include scrollbars(.5em, slategray);
+  @include scrollbars(.5em, $gist-base3, $gist-base2);
 }
 
 .gist {
