--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -1,12 +1,5 @@
-/// Mixin to customize scrollbars
-/// Beware, this does not work in all browsers
-/// @author Hugo Giraudel
-/// @param {Length} $size - Horizontal scrollbar's height and vertical scrollbar's width
-/// @param {Color} $foreground-color - Scrollbar's color
-/// @param {Color} $background-color [mix($foreground-color, white, 50%)] - Scrollbar's color
-/// @example scss - Scrollbar styling
-///   @include scrollbars(.5em, slategray);
 @mixin scrollbars($size, $foreground-color, $background-color: mix($foreground-color, white,  50%)) {
+    
   // For Google Chrome
   ::-webkit-scrollbar {
       width:  $size;
@@ -34,7 +27,7 @@
   background-color: transparent !important;
   border: none !important;
   background-color: $gist-base3;
-  @include scrollbars(.5em, $gist-meta-color, $gist-base2);
+  @include scrollbars(.5em, $gist-meta-color, $gist-scroll-track);
 }
 
 .gist {
