--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -71,6 +71,9 @@ $gist-blue            : #268bd2;
 $gist-cyan            : #2aa198;
 $gist-green           : #859900;
 
+$gist-scroll-track    : $gist-base2;
+$gist-scroll-thumb    : #969492;
+
 $gist-selection-bg    : $gist-base2;
 $gist-selection-color : $gist-blue;
 $gist-border-color    : #d3d3d3;
