--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -72,7 +72,7 @@ $gist-cyan            : #2aa198;
 $gist-green           : #859900;
 
 $gist-scroll-track    : $gist-base2;
-$gist-scroll-thumb    : #969492;
+$gist-scroll-thumb    : #2aa198;
     
 $gist-border-color    : $gist-base1;
 $gist-selection-bg    : $gist-red;
