--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -72,7 +72,7 @@ $gist-cyan            : #2aa198;
 $gist-green           : #859900;
 
 $gist-scroll-track    : $gist-base2;
-$gist-scroll-thumb    : #969492;
+$gist-scroll-thumb    : rgba(213, 205, 180, 1);
 
 $gist-selection-bg    : $gist-base2;
 $gist-selection-color : $gist-blue;
