--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -144,7 +144,7 @@ li {
         padding: 0 5px;
         border: 1px solid $gist-border-color;
         background-color: $gist-base3;
-        color: $gist-base01;
+        color: #586e75;
         @include rounded(4px);
     }
 }
