--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -91,9 +91,9 @@
   .gist-meta {
     padding: 5px 40px !important;
     background-color: transparent !important;
-    color: $gist-meta-color !important;
+    color: rgba(116, 112, 112, 0.8) !important;
     a {
-      color: $gist-meta-color !important;
+      color: rgba(116, 112, 112, 0.8) !important;
     }
   }
 
