--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -23,8 +23,8 @@
       border-radius : 0 0 5px 5px;
   }
 
-  scrollbar-face-color: $foreground-color;
-  scrollbar-track-color: $background-color;
+  scrollbar-face-color: #d5cdb4;
+  scrollbar-track-color: #eee8d5;
 }
 
 .gist {
