--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -56,9 +56,13 @@
     overflow-x: auto !important;
     word-wrap: normal !important;
     background-color: transparent !important;
-    @include rounded(6px);
+    -webkit-border-radius : 6px;
+    -moz-border-radius : 6px;
+    border-radius : 6px;
     border: 1px solid #586e75;
-    @include box-shadow(0 2px 5px rgba(0, 0, 0, 0.09));
+    -webkit-box-shadow : 0 2px 5px rgba(0, 0, 0, 0.09);
+    -moz-box-shadow : 0 2px 5px rgba(0, 0, 0, 0.09);
+    box-shadow : 0 2px 5px rgba(0, 0, 0, 0.09);
   }
 
   .line-data {
