Social sharing improved

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -17,6 +17,10 @@
 <!-- Table of Contents -->
 <script src="/assets/js/plugins/toc.js" type="text/javascript"></script>
 
+<!-- RRSSB Social Sharing -->
+<script type="text/javascript" src="{{ "/assets/js/libs/rrssb.min.js" | prepend: site.baseurl }}"></script>
+
+
 {% if site.google_analytics %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
