--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -18,7 +18,7 @@
 <script src="/assets/js/plugins/toc.js" type="text/javascript"></script>
 
 <!-- RRSSB Social Sharing -->
-<script type="text/javascript" src="{{ "/assets/js/libs/rrssb.min.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ "/assets/js/plugins/rrssb.min.js" | prepend: site.baseurl }}"></script>
 
 
 {% if site.google_analytics %}
